# Search-for-vacancies

./: README.md  main.py  pyproject.toml
data/: areas.json
src/: abstract_classes.py  class_exchange_rates.py  class_headhunter_api.py  class_json_saver.py  class_vacancy.py
tests/: conftest.py  test_class_vacancy.py
